--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,6 +3,18 @@
 * {
   margin: 0 auto;
   padding: 0;
+
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: #ccc;
+    border-radius: 5px;
+  }
 }
 html,
 body,
